# aoc-language-ini

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  aoc_language_ini.c  aoc_language_ini.h  api.c  api.h  getstrings.c  hook.c  main.c  strings.rc
.github/workflows/: ccpp.yml
include/: mmmod.h
